# job-intel

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: _workflows_impl.py  cli.py  resources.py  runtime_paths.py  ui.py  ui_options.py  workflows.py
app/ai/: decision.py  evaluator.py  extract.py  rank.py
app/cli/: __init__.py  __main__.py  clear.py  desktop.py  fetch.py  rank.py  shared.py  ui.py
app/desktop/: __init__.py  __main__.py  launcher.py  open_path.py  paths.py
app/filtering/: presets.py  rule_config.py  rule_matching.py  rule_scoring.py  rules.py  seniority.py
app/llm/: __init__.py  base.py  factory.py  mock_client.py  ollama_client.py  openai_client.py
app/models/: evaluation.py  job.py  profile.py
app/ui/: app.py  (+8 more)
benchmarks/: benchmark_fetch.py  benchmark_scoring.py  benchmark_storage.py  run_benchmarks.py
config/: rule_weights.example.json
docs/: MACOS_RELEASE.md  PACKAGING.md  module_cleanup.md  operations.md
packaging/: README.md
profiles/: aerospace_defense_software_engineer.json  ai_infrastructure_engineer.json  default.json  example.json  generalist_cpp_software_engineer.json  mathieu.json  simulation_software_engineer.json  systems_software_engineer.json
scripts/: build_macos.sh  build_windows.ps1
tests/: _sqlite_review_shared.py  conftest.py  test_ai_review_workflow.py  test_fast_backfill.py  test_fetch_workflow.py  test_sqlite_profile_scoring.py  test_sqlite_review.py  test_sqlite_storage_maintenance.py  test_storage.py  test_ui_settings.py  test_ui_workflows.py
(+107 files in other folders)
